--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,3 +3,9 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.control {
+  border: 1px solid black;
+  border-radius: 4px;
+  padding: 6px;
+}
